[package]
name = "blazingly-fast-csv-worker"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async = { version = "1.2.6", features = ["tokio"] }
futures = "0.3.27"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
